--- a/php/5.6/Dockerfile
+++ b/php/5.6/Dockerfile
@@ -1,28 +1,30 @@
-FROM debian:wheezy
+FROM debian:jessie
 MAINTAINER Kaliop
-LABEL php.version=5.4
+LABEL php.version=5.6
 
 # Base packages
 # -----------------------------------------------------------------------------
 RUN apt-get update && \
     apt-get install -y \
     php5 \
-		php5-mysqlnd \
-		php5-json \
-		php5-xsl \
-		php5-intl \
-		php5-mcrypt \
-		php5-curl \
-		php5-imagick \
-		php5-gd \
-		php5-xmlrpc \
-		php5-memcached \
-		php5-xdebug
+    php5-readline \
+    php5-mysqlnd \
+    php5-json \
+    php5-xsl \
+    php5-intl \
+    php5-mcrypt \
+    php5-curl \
+    php5-imagick \
+    php5-gd \
+    php5-xmlrpc \
+    php5-memcached \
+    php5-xdebug
 
 # PHP config
 # -----------------------------------------------------------------------------
 # remove default xdebug config
 RUN rm /etc/php5/cli/conf.d/20-xdebug.ini
+RUN rm /etc/php5/apache2/conf.d/20-xdebug.ini
 
 # Clear archives in apt cache folder
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
