added custom php config variables in base PHP images

--- a/php/5.4/Dockerfile
+++ b/php/5.4/Dockerfile
@@ -6,6 +6,7 @@ LABEL php.version=5.4
 # -----------------------------------------------------------------------------
 RUN apt-get update && \
     apt-get install -y \
+    curl \
     php5 \
 		php5-mysqlnd \
 		php5-json \
@@ -21,8 +22,11 @@ RUN apt-get update && \
 
 # PHP config
 # -----------------------------------------------------------------------------
+# Custom PHP variables
+RUN curl -L -o /etc/php5/conf.d/custom_vars.ini https://raw.githubusercontent.com/kaliop/docker-images/master/build_files/php/custom_vars.ini
+
 # remove default xdebug config
-RUN rm /etc/php5/cli/conf.d/20-xdebug.ini
+RUN rm /etc/php5/conf.d/20-xdebug.ini
 
 # Clear archives in apt cache folder
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
