renamed php-fpm sock path in nginx vhosts files

--- a/build_files/nginx/vhosts/controlpanel.conf
+++ b/build_files/nginx/vhosts/controlpanel.conf
@@ -38,6 +38,6 @@ server {
         fastcgi_index index.php;
 
          # FPM socket
-        fastcgi_pass unix:/var/run/php/php7.1-fpm.sock;
+        fastcgi_pass unix:/var/run/php/php-fpm.sock;
     }
 }
