--- a/build_files/php/custom_vars.ini
+++ b/build_files/php/custom_vars.ini
@@ -14,6 +14,8 @@ magic_quotes_runtime=0
 allow_call_time_pass_reference=0
 file_uploads=1
 
+[Date]
+date.timezone=Europe/Paris
 
 [Session]
 session.save_handler=memcached
