updated apache bootstrap script to loop through sites-available folder & allow secondary startup script + fix 001-dynamic-vhost-ez5.conf

--- a/build_files/apache/vhosts/001-dynamic-vhost-ez5.conf
+++ b/build_files/apache/vhosts/001-dynamic-vhost-ez5.conf
@@ -8,14 +8,15 @@ UseCanonicalName Off
     ServerAlias *.*.*.dev.loc
     ServerAdmin ezdev@kaliop.com
 
-    #SetEnv ENVIRONMENT "dev"
     SetEnvIf Request_Method .* ENVIRONMENT=dev
     SetEnv USE_HTTP_CACHE 0
-	SetEnv TRUSTED_PROXIES "varnish"
+    SetEnv TRUSTED_PROXIES "varnish"
 
     # Log everything so its sortable by domain name.
     LogFormat "%V %h %t \"%r\" %s %b" vcommon
     LogLevel warn
+
+    #Uncomment to log rewrite rules
     #LogLevel alert rewrite:trace6
     CustomLog ${APACHE_LOG_DIR}/access.log vcommon
     ErrorLog ${APACHE_LOG_DIR}/error.log
@@ -31,9 +32,9 @@ UseCanonicalName Off
        Options FollowSymLinks
        # depending on your global Apache settings, you may need to uncomment and adapt
        # for Apache 2.2 and earlier:
-       Allow from all
-       Satisfy Any
-       Order allow,deny
+       # Allow from all
+       # Satisfy Any
+       # Order allow,deny
        # for Apache 2.4:
        Require all granted
     </Directory>
@@ -50,7 +51,7 @@ UseCanonicalName Off
 
     SetEnvIf Request_Method .* ENVIRONMENT=demo
     SetEnv USE_HTTP_CACHE 0
-	SetEnv TRUSTED_PROXIES "varnish"
+    SetEnv TRUSTED_PROXIES "varnish"
 
     # Log everything so its sortable by domain name.
     LogFormat "%V %h %t \"%r\" %s %b" vcommon
@@ -71,7 +72,9 @@ UseCanonicalName Off
        Options FollowSymLinks
        # depending on your global Apache settings, you may need to uncomment and adapt
        # for Apache 2.2 and earlier:
-       #Allow from all
+       # Allow from all
+       # Satisfy Any
+       # Order allow,deny
        # for Apache 2.4:
        Require all granted
     </Directory>
