added startup script example in full php stack example + added new light frontend stack example

--- a/compose/full_php_stack.yml
+++ b/compose/full_php_stack.yml
@@ -19,6 +19,7 @@ services:
             - "88:88"
         volumes:
             - "~/www:/var/www:rw"
+            - "./startup.sh:/run/startup.sh:ro"
         env_file:
             - .env
         cap_add:
