--- a/compose/docker-compose.env
+++ b/compose/docker-compose.env
@@ -1,15 +1,10 @@
-# NB: This file is stored in git, and is thus common to the whole project team.
-# If you have to change the values for your workstation, please do so in a file called docker-compose.env.local
-
-### Web+CLI Containers Settings
-
-# Needed to be able to execute 'top'
-TERM=xterm-color
+# NB: This file should be stored in git, and should thus be common to the whole project team.
+# If you have to change the values for your workstation, please do so in a file called docker-compose.env.local or .env
 
 ### MySQL Settings
 # NB: these are used when the db is created the 1st time the platform is executed. Changing them afterwards will have
 # no effect (unless you delete the db data files)
-MYSQL_ROOT_PASSWORD=root_ez
+MYSQL_ROOT_PASSWORD=root_mysql
 MYSQL_USER=mysql
 MYSQL_PASSWORD=mysql
-MYSQL_DATABASE=ezdev
+MYSQL_DATABASE=dev
