--- a/compose/full_php_stack.yml
+++ b/compose/full_php_stack.yml
@@ -42,6 +42,7 @@ services:
             - "~/www:/var/www:rw"
         environment:
             - SSH_AUTH_SOCK=/ssh-agent
+            - TERM=xterm-color
         cap_add:
             - SYS_PTRACE
         networks:
