updated vhosts build files for apache 2.2

--- a/build_files/apache/vhosts/001-dynamic-vhost-ez5.conf
+++ b/build_files/apache/vhosts/001-dynamic-vhost-ez5.conf
@@ -32,9 +32,9 @@ UseCanonicalName Off
        Options FollowSymLinks
        # depending on your global Apache settings, you may need to uncomment and adapt
        # for Apache 2.2 and earlier:
-       # Allow from all
-       # Satisfy Any
-       # Order allow,deny
+       Allow from all
+       Satisfy Any
+       Order allow,deny
        # for Apache 2.4:
        Require all granted
     </Directory>
@@ -72,9 +72,9 @@ UseCanonicalName Off
        Options FollowSymLinks
        # depending on your global Apache settings, you may need to uncomment and adapt
        # for Apache 2.2 and earlier:
-       # Allow from all
-       # Satisfy Any
-       # Order allow,deny
+       Allow from all
+       Satisfy Any
+       Order allow,deny
        # for Apache 2.4:
        Require all granted
     </Directory>
