changed ServerAdmin in controlpanel & default vhosts

--- a/build_files/apache/vhosts/010-controlpanel.conf
+++ b/build_files/apache/vhosts/010-controlpanel.conf
@@ -6,7 +6,7 @@ ExtendedStatus On
 
 <VirtualHost *:88>
 
-    ServerAdmin notifications-uk@kaliop.com
+    ServerAdmin controlpanel@kaliop.com
 
     DocumentRoot /home/site/controlpanel
     DirectoryIndex index.php index.html
