--- a/build_files/apache/vhosts/010-default.conf
+++ b/build_files/apache/vhosts/010-default.conf
@@ -8,7 +8,7 @@
 	# However, you must set it for any further virtual host explicitly.
 	#ServerName www.example.com
 
-	ServerAdmin ezdev@kaliop.com
+	ServerAdmin docker@kaliop.com
 	DocumentRoot /var/www
 	DirectoryIndex index.php index.html
 
