--- a/php/cli/5.6/Dockerfile
+++ b/php/cli/5.6/Dockerfile
@@ -17,6 +17,7 @@ RUN echo $DOCKER_TIMEZONE > /etc/timezone; dpkg-reconfigure -f noninteractive tz
 # -----------------------------------------------------------------------------
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     wget \
+    bash-completion \
     netcat \
     git \
     pwgen \
