update ez5 & ezplatform vhosts

--- a/build_files/apache/vhosts/001-dynamic-vhost-ez5.conf
+++ b/build_files/apache/vhosts/001-dynamic-vhost-ez5.conf
@@ -1,5 +1,4 @@
 # Enable wildcard catching of domain names by vhost directive.
-UseCanonicalName Off
 
 <VirtualHost *:80>
     # Catch only requests to ezdev domains.
@@ -27,7 +26,7 @@ UseCanonicalName Off
     DirectoryIndex index.php
     UseCanonicalName Off
 
-    <Directory /var/www/*/web>
+    <Directory /var/www/%2/web>
        AllowOverride All
        Options FollowSymLinks
        # depending on your global Apache settings, you may need to uncomment and adapt
@@ -67,7 +66,7 @@ UseCanonicalName Off
     DirectoryIndex index.php
     UseCanonicalName Off
 
-    <Directory /var/www/*/web>
+    <Directory /var/www/%2/web>
        AllowOverride All
        Options FollowSymLinks
        # depending on your global Apache settings, you may need to uncomment and adapt
