--- a/build_files/apache/vhosts/002-dynamic-vhost-ezplatform.conf
+++ b/build_files/apache/vhosts/002-dynamic-vhost-ezplatform.conf
@@ -1,19 +1,19 @@
 # Enable wildcard catching of domain names by vhost directive.
-UseCanonicalName Off
 
 <VirtualHost *:80>
     # Catch only requests to ez6 domains.
     ServerName ez6
     ServerAlias *.*.ez6
     ServerAdmin ez6@kaliop.com
+    DirectoryIndex app.php
 
-    SetEnv SYMFONY_ENV "dev"
     SetEnv SYMFONY_HTTP_CACHE 0
     SetEnv SYMFONY_TRUSTED_PROXIES "varnish"
+    SetEnvIf Request_URI ".*" SYMFONY_ENV=dev
 
     # Set default timeout to 90s, and max upload to 48mb
     TimeOut 90
-    LimitRequestBody 5000000
+    LimitRequestBody 0
 
     # Log everything so its sortable by domain name.
     LogFormat "%V %h %t \"%r\" %s %b" vcommon
@@ -23,14 +23,12 @@ UseCanonicalName Off
     ErrorLog ${APACHE_LOG_DIR}/error.log
 
     # Use the first part of the domain name as folder name to look in.
+    UseCanonicalName Off
     VirtualDocumentRoot /var/www/%2/web
 
-    UseCanonicalName Off
-    DirectoryIndex app.php
-
-    <Directory /var/www/*/web>
+    <Directory /var/www/%2/web>
        AllowOverride All
-       Options Indexes FollowSymLinks
+       Options FollowSymLinks
        Require all granted
     </Directory>
 
@@ -62,7 +60,7 @@ UseCanonicalName Off
     DirectoryIndex app.php
     UseCanonicalName Off
 
-    <Directory /var/www/*/web>
+    <Directory /var/www/%2/web>
        AllowOverride All
        Options FollowSymLinks
        Require all granted
