--- a/build_files/apache/vhosts/ez5-common.conf
+++ b/build_files/apache/vhosts/ez5-common.conf
@@ -69,7 +69,7 @@
         RewriteCond "%{ENV:ENVIRONMENT}" "(prod|demo)"
         RewriteRule ^/(css|js|font|compiled)/.*\.(css|js|otf|eot|ttf|svg|woff) - [L]
 
-        #RewriteRule .* /index\.php
+        RewriteRule .* /index\.php [PT]
     </IfModule>
 
     # Everything below is optional to improve performance by forcing
