--- a/build_files/apache/vhosts/ezplatform-common.conf
+++ b/build_files/apache/vhosts/ezplatform-common.conf
@@ -1,12 +1,27 @@
 ### Taken from the official Apache Vhost from eZPublish
 ###
-### to be include from within a vhost
+### to be included from within a vhost
 
-<IfModule mod_rewrite.c>
+
     RewriteEngine On
 
+    # Legacy bridge rewrite rules
+
+    # If using cluster, uncomment the following two lines:
+    #RewriteRule ^/var/([^/]+/)?storage/images(-versioned)?/.* /index.php [L]
+    #RewriteRule ^/var/([^/]+/)?cache/(texttoimage|public)/.* /index_cluster.php [L]
+
+    RewriteRule ^/var/([^/]+/)?storage/images(-versioned)?/.* - [L]
+    RewriteRule ^/var/([^/]+/)?cache/(texttoimage|public)/.* - [L]
+    RewriteRule ^/design/[^/]+/(stylesheets|images|javascript|fonts)/.* - [L]
+    RewriteRule ^/share/icons/.* - [L]
+    RewriteRule ^/extension/[^/]+/design/[^/]+/(stylesheets|flash|images|lib|javascripts?)/.* - [L]
+    RewriteRule ^/packages/styles/.+/(stylesheets|images|javascript)/[^/]+/.* - [L]
+    RewriteRule ^/packages/styles/.+/thumbnail/.* - [L]
+    RewriteRule ^/var/storage/packages/.* - [L]
+
     # For FastCGI mode or when using PHP-FPM, to get basic auth working.
-    #RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
     # Cluster/streamed files rewrite rules. Enable on cluster with DFS as a binary data handler
     #RewriteRule ^/var/([^/]+/)?storage/images(-versioned)?/.* /app.php [L]
@@ -33,7 +48,10 @@
     RewriteCond %{ENV:SYMFONY_ENV} !^(dev)
     RewriteRule ^/(css|js|font)/.*\.(css|js|otf|eot|ttf|svg|woff) - [L]
 
-</IfModule>
+    # Prevent access to website with direct usage of app.php in URL
+    RewriteRule ^/(.+/)?app\.php - [R=404,L]
+
+    RewriteRule .* /app.php [PT]
 
 # Everything below is optional to improve performance by forcing
 # clients to cache image and design files, change the expires time
