--- a/solr/6.6_ezplatform/Dockerfile
+++ b/solr/6.6_ezplatform/Dockerfile
@@ -14,13 +14,23 @@ USER root
 RUN echo $DOCKER_TIMEZONE > /etc/timezone; dpkg-reconfigure -f noninteractive tzdata
 
 # Create a new core for eZPlatform : see https://doc.ezplatform.com/en/2.0/guide/search/#solr-bundle
-ARG SOLR_CORE_DIR=/opt/solr/server/solr/ezplatform
+ARG SOLR_ROOT_DIR=/opt/solr
+ARG SOLR_CORE_DIR=$SOLR_ROOT_DIR/server/solr/ezplatform
 COPY coreconfig.sh /root/
 RUN bash /root/coreconfig.sh
 COPY ezsolr/ez/ $SOLR_CORE_DIR/
 COPY core.properties $SOLR_CORE_DIR/
 RUN chown -R solr:solr $SOLR_CORE_DIR
 
-USER $SOLR_USER
+# Install Solr as service
+RUN cp $SOLR_ROOT_DIR/bin/init.d/solr /etc/init.d/solr && \
+    cp $SOLR_ROOT_DIR/bin/solr.in.sh /etc/default/solr.in.sh && \
+    chmod 755 /etc/init.d/solr && \
+    chown root:root /etc/init.d/solr && \
+    update-rc.d solr defaults && \
+    update-rc.d solr enable
 
-CMD ["solr-foreground"]
+COPY bootstrap.sh /root/bootstrap.sh
+RUN chmod 755 /root/bootstrap.sh
+
+CMD ["/root/bootstrap.sh"]
