update wordpress virtualhost

--- a/build_files/apache/vhosts/005-dynamic-vhost-wp.conf
+++ b/build_files/apache/vhosts/005-dynamic-vhost-wp.conf
@@ -1,4 +1,4 @@
-   # Enable wildcard catching of domain names by vhost directive.
+# Wordpress custom virtualhost
 
 <VirtualHost *:80>
     # Catch only requests to wpdev domains.
@@ -22,12 +22,12 @@
     ErrorLog ${APACHE_LOG_DIR}/error.log
 
     # Use the first part of the domain name as folder name to look in.
-    VirtualDocumentRoot /var/www/${SITE_NAME}/web/
+    VirtualDocumentRoot /var/www/%2/web/
 
     DirectoryIndex index.php
     UseCanonicalName Off
 
-    <Directory /var/www/${SITE_NAME}/web>
+    <Directory /var/www/%2/web>
        AllowOverride All
        Options FollowSymLinks
        # depending on your global Apache settings, you may need to uncomment and adapt
