added wordpress virtual host in all apache images + wordpress docker-compose.yml example

--- a/php/apache/5.4/Dockerfile
+++ b/php/apache/5.4/Dockerfile
@@ -77,7 +77,7 @@ RUN a2enmod rewrite headers vhost_alias proxy_http proxy ssl info status
 # vhost config
 # -----------------------------------------------------------------------------
 # default & controlpanel
-RUN curl -L -o /etc/apache2/sites-available/010-default.conf https://raw.githubusercontent.com/kaliop/docker-images/master/build_files/apache/vhosts/010-default.conf && \
+RUN curl -L -o /etc/apache2/sites-available/099-default.conf https://raw.githubusercontent.com/kaliop/docker-images/master/build_files/apache/vhosts/099-default.conf && \
     curl -L -o /tmp/010-controlpanel.conf https://raw.githubusercontent.com/kaliop/docker-images/master/build_files/apache/vhosts/010-controlpanel.conf && \
     cat /tmp/010-controlpanel.conf >> /etc/apache2/apache2.conf && \
     rm /tmp/010-controlpanel.conf
@@ -87,12 +87,14 @@ RUN curl -L -o /tmp/controlpanel.tar.gz https://github.com/kaliop/docker-images/
     rm /tmp/controlpanel.tar.gz
 
 RUN  a2dissite 000-default && \
-     a2ensite 010-default.conf
+     a2ensite 099-default.conf
 
 # dynamic vhosts
 # a2ensite is run in bootstrap.sh for these as they could also be mounted as volume at run time
 RUN curl -L -o /etc/apache2/sites-available/001-dynamic-vhost-ez5.conf https://raw.githubusercontent.com/kaliop/docker-images/master/build_files/apache/vhosts/001-dynamic-vhost-ez5.conf && \
     curl -L -o /etc/apache2/sites-available/003-dynamic-vhost-ez4.conf https://raw.githubusercontent.com/kaliop/docker-images/master/build_files/apache/vhosts/003-dynamic-vhost-ez4.conf && \
+    curl -L -o /etc/apache2/sites-available/005-dynamic-vhost-wp.conf https://raw.githubusercontent.com/kaliop/docker-images/master/build_files/apache/vhosts/005-dynamic-vhost-wp.conf && \
+    curl -L -o /etc/apache2/sites-available/098-dynamic-vhost.conf https://raw.githubusercontent.com/kaliop/docker-images/master/build_files/apache/vhosts/098-dynamic-vhost.conf && \
     curl -L -o /etc/apache2/sites-available/ez5-common.conf https://raw.githubusercontent.com/kaliop/docker-images/master/build_files/apache/vhosts/ez5-common.conf
 
 # Clear archives in apt cache folder
