switch to DocumentRoot with SITE_NAME env var for wordpress

--- a/build_files/apache/vhosts/005-dynamic-vhost-wp.conf
+++ b/build_files/apache/vhosts/005-dynamic-vhost-wp.conf
@@ -21,13 +21,13 @@
     CustomLog ${APACHE_LOG_DIR}/access.log vcommon
     ErrorLog ${APACHE_LOG_DIR}/error.log
 
-    # Use the first part of the domain name as folder name to look in.
-    VirtualDocumentRoot /var/www/%2/web/
+    # WP_SITE_NAME variable must be defined in apache envvars
+    DocumentRoot /var/www/${WP_SITE_NAME}/web/
 
     DirectoryIndex index.php
     UseCanonicalName Off
 
-    <Directory /var/www/%2/web>
+    <Directory /var/www/${WP_SITE_NAME}/web>
        AllowOverride All
        Options FollowSymLinks
        # depending on your global Apache settings, you may need to uncomment and adapt
