--- a/build_files/apache/vhosts/003-dynamic-vhost-ez4.conf
+++ b/build_files/apache/vhosts/003-dynamic-vhost-ez4.conf
@@ -22,7 +22,7 @@ UseCanonicalName Off
     DirectoryIndex index.php
     UseCanonicalName Off
 
-    <Directory /var/www/*>
+    <Directory /var/www/%2/>
        AllowOverride All
        Options FollowSymLinks
        # depending on your global Apache settings, you may need to uncomment and adapt
@@ -68,7 +68,7 @@ UseCanonicalName Off
         # RewriteRule ^/var/cache/debug\.html.* - [L]
         # RewriteRule ^/var/[^/]+/cache/debug\.html.* - [L]
  
-        RewriteRule .* /index.php
+        RewriteRule .* /index\.php [PT]
         
     </IfModule> 
 
