update automation image to use python 3.6

--- a/automation/Dockerfile
+++ b/automation/Dockerfile
@@ -1,17 +1,15 @@
-FROM debian:9.6
+FROM python:3.6.8-slim-stretch
 
 MAINTAINER Kaliop
 
 ARG ANSIBLE_VERSION=2.6.7
 ARG MOLECULE_VERSION=2.19.0
-ARG VENV_ROOT=/home/automation/virtualenv
 ARG LOCALE=fr_FR.UTF-8
 
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
     locales \
-    python3.5-minimal \
-    python3-pip
+    gcc
 
 # Clear archives in apt cache folder
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
@@ -32,9 +30,9 @@ RUN addgroup --gid 1000 automation && \
 USER automation:automation
 
 # Install tools via pip
-RUN pip3 install molecule==${MOLECULE_VERSION} && \
-    pip3 install ansible==${ANSIBLE_VERSION} && \
-    pip3 install docker-py
+RUN pip3 install --user molecule==${MOLECULE_VERSION} && \
+    pip3 install --user ansible==${ANSIBLE_VERSION} && \
+    pip3 install --user docker-py
 
 # Setup userland local PATH & clear home .cache folder
 RUN echo "export PATH=/home/automation/.local/bin/:$PATH" >> /home/automation/.bashrc && \
