--- a/automation/Dockerfile
+++ b/automation/Dockerfile
@@ -11,7 +11,8 @@ RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
     locales \
     curl \
-    gcc
+    gcc \
+    git
 
 # Clear archives in apt cache folder
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
